# content-blocker

./: Cargo.toml  redirect.py
scripts/: proxy_loader_mac.sh
src/: main.rs
