[package]
name = "web-blocker"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSAttributedString", "NSButton", "NSFont", "NSStatusBarButton"] }
objc2-foundation = { version = "0.3.2", features = ["NSAttributedString", "NSDictionary", "NSString"] }
tao = "0.35.0"
tray-icon = "0.21.3"
